--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "db:migrate": "node scripts/migrate.cjs"
   },
   "dependencies": {
     "@hookform/resolvers": "latest",
@@ -53,6 +54,7 @@
     "next": "^15.4.0-canary.91",
     "next-themes": "^0.4.4",
     "oslo": "latest",
+    "pg": "^8.16.2",
     "react": "^18",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
